@@ -837,6 +837,10 @@ static Class NSNullK;
     {
       currentSource = [_sources objectForKey: sourceID];
 
+      // We update the placeholder in the LDAP source if needed
+      if ([currentSource conformsToProtocol: @protocol(SOGoDNSource)])
+        [currentSource updateBaseDNFromLogin: theUID];
+
       // Use the provided domain during the lookup. If none is defined, use the source's one
       // so if there's a match based on the source's domain, the user ID will be associated
       // to the right source.
@@ -1078,7 +1082,7 @@ static Class NSNullK;
 
                   [self _retainUser: currentUser  withLogin: cacheUid];
                 }
-            }
+            } // if (newUser)
         }
     }
   else
