@@ -26,6 +26,7 @@ Bug fixes
  - [core] consider DAVx5 like Apple Calendar (#4304)
  - [core] improve handling of signer certificate (#4742)
  - [core] added safety checks in S/MIME (#4745)
+ - [core] fixed domain placeholder issue when using sogo-tool (#4723)
 
 4.0.7 (2019-02-27)
 ------------------
